<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/detail_container_fragment"
        android:layout_width="@dimen/detail_fragment_width"
        android:layout_height="@dimen/detail_fragment_height"
        app:layout_constraintBottom_toTopOf="@+id/btn_prev_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        tools:layout="@layout/fragment_step_detail" />

    <Button
        android:id="@+id/btn_prev_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/previous" />

    <Button
        android:id="@+id/btn_add_to_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_prev_step"
        app:layout_constraintRight_toLeftOf="@+id/btn_next_step"
        tools:text="@string/add_to_widget" />

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/next" />

</android.support.constraint.ConstraintLayout>
