<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <fragment
        android:id="@+id/master_list_fragment"
        android:name="com.udacity.jevonaverill.udacitybakingapprevised.fragment.MasterListFragment"
        android:layout_width="@dimen/list_fragment_width"
        android:layout_height="@dimen/list_fragment_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        tools:layout="@layout/fragment_master_list" />

</android.support.constraint.ConstraintLayout>